--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,6 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/database_name"
-
-# Cardano Blockchain
-API_URL_MAINNET="https://cardano-mainnet.blockfrost.io/api/v0"
-BLOCKFROST_KEY_MAINNET="your_blockfrost_api_key"
-CARDANO_WALLET_SEED="your server wallet seed phrase here"
-
-# Stripe Payment Processing
-STRIPE_SECRET_KEY="sk_test_..." # or sk_live_... for production
-STRIPE_WEBHOOK_SECRET="whsec_..."
+# Frontend only needs Stripe publishable key
+# Backend server handles all other services (database, blockchain, email, etc.)
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_..." # or pk_live_... for production
 
-# Email Configuration (SMTP)
-SMTP_HOST="smtp.gmail.com" # or your SMTP provider
-SMTP_PORT="587"
-SMTP_USER="your-email@gmail.com"
-SMTP_PASS="your-app-password"
-SMTP_FROM_EMAIL="noreply@alomnify.nl"
+# Backend server URL (deployed on Cloudflare Workers)  
+NEXT_PUBLIC_BACKEND_URL="https://alomnify-api.alomnify.workers.dev"
