--- a/package.json
+++ b/package.json
@@ -13,19 +13,12 @@
 		"@cardano-foundation/cardano-connect-with-wallet-core": "^0.2.8",
 		"@harmoniclabs/cbor": "^1.6.6",
 		"@lucid-evolution/lucid": "^0.4.29",
-		"@neondatabase/serverless": "^0.10.4",
 		"@reduxjs/toolkit": "^2.8.2",
 		"@remixicon/react": "^4.6.0",
 		"@stripe/stripe-js": "^7.9.0",
-		"@types/nodemailer": "^6.4.19",
 		"autoprefixer": "^10.4.21",
 		"clsx": "^2.1.1",
-		"dotenv": "^16.6.1",
-		"drizzle-orm": "^0.38.4",
-		"effect": "^3.17.10",
 		"next": "^15.5.2",
-		"next-auth": "^4.24.11",
-		"nodemailer": "^7.0.6",
 		"postcss": "^8.5.6",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
@@ -34,11 +27,8 @@
 		"react-redux": "^9.2.0",
 		"recharts": "^2.15.4",
 		"redux-persist": "^6.0.0",
-		"stripe": "18.3.0",
 		"swiper": "^11.2.10",
-		"tailwind-merge": "^3.3.1",
-		"utf-8-validate": "^5.0.10",
-		"ws": "^8.18.3"
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^15.5.2",
@@ -46,9 +36,7 @@
 		"@types/node": "^22.18.0",
 		"@types/react": "19.0.7",
 		"@types/react-dom": "^19.1.9",
-		"@types/ws": "^8.18.1",
 		"daisyui": "^4.12.24",
-		"drizzle-kit": "^0.30.6",
 		"eslint": "^9.34.0",
 		"eslint-config-next": "^15.5.2",
 		"eslint-plugin-react": "^7.37.5",
