--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"@remixicon/react": "^4.7.0",
 		"autoprefixer": "^10.4.23",
 		"clsx": "^2.1.1",
+		"html2canvas": "^1.4.1",
 		"next": "^16.0.10",
 		"postcss": "^8.5.6",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
+		"react-to-print": "^3.2.0",
 		"recharts": "^2.15.4",
 		"redux-persist": "^6.0.0",
 		"swiper": "^11.2.10",
